--- a/src/components/invitation/invitation.component.html
+++ b/src/components/invitation/invitation.component.html
@@ -15,17 +15,17 @@
             <p class="d-block d-xl-none">Quốc Đạt<br>&<br>Nhã Trân</p>
         </div>
         <div class="text-3">
-            <p>Thời gian tổ chức vào lúc 11:00</p>
+            <p>Thời gian tổ chức vào lúc 11:30</p>
         </div>
         <div class="date-time">
             <div class="row content">
                 <div class="col-4 left date-time-item">
                     <p>THÁNG</p>
-                    <p>04</p>
+                    <p>05</p>
                 </div>
                 <div class="col-4 center date-time-item">
-                    <p>CHỦ NHẬT</p>
-                    <p class="big">07</p>
+                    <p>THỨ BẢY</p>
+                    <p class="big">04</p>
                 </div>
                 <div class="col-4 right date-time-item">
                     <p>NĂM</p>
