--- a/src/components/invitation/invitation.component.html
+++ b/src/components/invitation/invitation.component.html
@@ -36,8 +36,8 @@
         <div class="text-3 mt-5">
             <p class="">LỄ CƯỚI ĐƯỢC TỔ CHỨC TẠI:</p>
             <p class="d-block add-text">TƯ GIA</p>
-            <p class="d-block">488 ĐƯỜNG 30/4 - KV5 - P.LÁI HIẾU</p>
-            <p class="d-block">TP.NGÃ BẢY - T.HẬU GIANG</p>
+            <p class="d-block">THÔN TAM BAO - ĐẠ ĐỜN</p>
+            <p class="d-block">LÂM HÀ - LÂM ĐỒNG</p>
         </div>
         <div class="boder-bottom">
             <div class="boder-bottom-center"></div>
@@ -45,8 +45,8 @@
         <div class="text-2 mt-5">
             <p>Sự hiện diện của bạn là niềm vinh hạnh của chúng mình!</p>
         </div>
-        <div class="d-none d-xl-block mt-4">
+        <!-- <div class="d-none d-xl-block mt-4">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d791.0419845796922!2d105.7935660864579!3d9.800328949365445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31a05f4e031bf4d5%3A0xe8f3403a01f2947!2zNDg4IDMwIFRow6FuZyA0LCBMw6FpIEhpw6p1LCBOZ8OjIELhuqN5LCBI4bqtdSBHaWFuZywgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1710821907080!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </div> -->
     </div>
 </section>
