--- a/src/components/invitation/invitation.component.html
+++ b/src/components/invitation/invitation.component.html
@@ -36,7 +36,7 @@
         <div class="text-3 mt-5">
             <p class="">LỄ CƯỚI ĐƯỢC TỔ CHỨC TẠI:</p>
             <p class="d-block add-text">TƯ GIA</p>
-            <p class="d-block">THÔN TAM BAO - ĐẠ ĐỜN</p>
+            <p class="d-block">THÔN ĐAM PAO - ĐẠ ĐỜN</p>
             <p class="d-block">LÂM HÀ - LÂM ĐỒNG</p>
         </div>
         <div class="boder-bottom">
